# dmenu-executor

./: .gitignore  pyproject.toml
examples/: entries.json
src/dmenu_executor/: __init__.py  entry.py  menu.py  settings.py
src/dmenu_executor/i3/: utils.py  workspace.py
src/dmenu_executor/web/: utils.py
