[build-system]
requires = ["setuptools>=65.6.3", "setuptools-git-versioning>=1.13.5"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true

[project]
name = "dmenu_executor"
description = "dmenu executor"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
        "i3ipc",
        "dmenu",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
dmenu-exec = "dmenu_executor:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = ["--import-mode=importlib"]
testpaths = "test"
